# bip39_vanity_rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs  search.rs
src/wallet/: bech32.rs  doge.rs  evm.rs  mod.rs
tests/: vectors.rs
